[package]
name = "bld-sig"
version = "0.1.0"
authors = ["hdcui <hdcui@cs.hku.hk>"]
edition = "2018"
keywords = [
    "ecdsa",
    "blind-ecdsa",
]

[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4" }
#rand = "0.7.0"
libc = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
criterion = "0.3"
rust-crypto = "0.2"
hex = "0.4"
uuid = { version = "0.8", features = ["v4"] }
libsecp256k1 = "0.3.2"
# class_group = { path = "../../../class" }

# [dependencies.class_group]
# git = "https://github.com/KZen-networks/class"
# tag = "v0.4.16"
# optional = true


[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.3"
features = ["ec_secp256k1"]


#[dependencies.rsa]
#git = "https://github.com/RustCrypto/RSA"
#tag = "v0.3.0"

# [dependencies.class_group]
# git = "https://github.com/KZen-networks/class"
# tag = "v0.4.13"

[dependencies.class_group]
git = "https://github.com/darrenhdc/class"


# [[bench]]
# name = "main"
# path = "src/main.rs"
# harness = false

[[bench]]
name = "nizk"
path = "benches/zk_bench.rs"
crate-type = ["main"]
harness = false
